        is converted to/from a publication/folder.

      - developers: issue 100712: tab_edit infrastructure has been
        refactoring so that each content has a tab_edit.pt rather than
        the 'edit.pt/.py' method.  The 'edit.pt/.py' method has been
        deprecated so that extensions may use this release to transition.
        FMI see doc/developer_notes.txt

    Features ported from 2.0 branch

      - Links to local (i.e. not fully qualified) domain names are no
        longer incorrectly converted to relative urls in rendered
        SilvaDocuments.

      - 128518 Import of non existing values for (multi)list metadata
        values gave a formulator SelectionValidator error.

      - Made Silva work with ExtFile once again: we no longer
        configure the filesystem_path in the service_files, but leave
        it to the extfile.ini.

      - additional behaviour to mangle.Id.new(), when passing True
        as the first argument one can suppress the ValueError raised
        on invalid ids (and always have a new id generated)

    Bugs Fixed:

      - Set overflow of selects in Kupu toolboxes to hidden, preventing long
        titles from pushing the toolbox wider.

      - Changed the threshold variable in upgrade.py from 500 to 50,
        this may impact speed of upgrades negatively but it seems
        necessary for for instance ExtFile migration, where 500
        objects can become too large for a single commit.

      - Setting the i18n domain for kupu htmlmacros.html to silva so
        toolbox is translated again bug 101706.

      - Changed the new version button in the editor screen from an
        input to a button, to avoid css conflicts with frontend.css
        controls styles

      - fixed 156921: Escaping image title strings.

      - fixed 101240: SilvaExternalSource cannot be disabled.

      - fixed 100835: image upload screen should show allowed formats

      - fixed 101174: When an id is in use on the Zope level, inform