@@ -335,10 +335,10 @@ function initSilvaKupu(iframe) {
 //    kupu.registerFilter(nonxhtmltagfilter);
 
     kupu.xhtmlvalid.setAttrFilter(['is_toc', 'toc_depth', 'is_citation', 
-                                    'source', 'author', 'source_id', 
-                                    'silva_type', 'alignment', 
-                                    'link_to_hires', 'link', 'silva_src',
-                                    'silva_href', 'silva_column_info']);
+				   'source', 'author', 'source_id', 'source_title',
+				   'silva_type', 'alignment', 
+				   'link_to_hires', 'link', 'silva_src',
+				   'silva_href', 'silva_column_info']);
     // allow all attributes on div, since ExternalSources require that
     kupu.xhtmlvalid.includeTagAttributes(['div'], ['*']);
     kupu.xhtmlvalid.includeTagAttributes(['p'], ['silva_type']);
